--- a/LightLocker/app/src/main/res/layout/activity_main.xml
+++ b/LightLocker/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.dhair.lightlocker.MainActivity">
+    tools:context="com.dhair.light.locker.MainActivity">
 
     <TextView
         android:text="Hello World!"
