--- a/LightLocker/app/src/main/res/layouts/base/layout/activity_statusbar.xml
+++ b/LightLocker/app/src/main/res/layouts/base/layout/activity_statusbar.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<Space
+<RelativeLayout
     android:id="@+id/status_bar_box"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="0dp"
+    android:layout_height="wrap_content"
     android:background="@color/colorPrimaryDark"/>
