--- a/LightLocker/app/src/main/res/layouts/home/layout/activity_home.xml
+++ b/LightLocker/app/src/main/res/layouts/home/layout/activity_home.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".ui.main.MainActivity">
+    tools:context=".ui.home.HomeActivity">
 
     <TextView
         android:textColor="@android:color/darker_gray"
