--- a/LightLocker/app/src/main/res/layouts/home/layout/activity_home.xml
+++ b/LightLocker/app/src/main/res/layouts/home/layout/activity_home.xml
@@ -17,7 +17,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="20dp"
-        app:RV_Circle_color="@color/colorAccent">
+        app:RV_Background_color="@color/colorRippleBg"
+        app:RV_Circle_color="@color/colorRippleCircle">
 
         <TextView
             android:layout_width="match_parent"
